--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ h1{
 
 section{
   display: flex;
+  margin-bottom: 150px;
 }
 
 .changes{
@@ -39,4 +40,15 @@ section{
  .banner{
    background-image: url(Images/top-banner.png);
    background-repeat:no-repeat;
+ }  
+
+ .middle{
+   background-image:url(images/dream-bg.png);
+   background-repeat:no-repeat;
+   background-position: right;
+ }
+
+
+ .marjin{
+   margin-right: 30px;
  }
