--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1{
 }
 
 .color{
-  color: rgb(104, 104, 105);
+  color: rgb(93, 93, 182);
 }
 
 section{
@@ -52,3 +52,42 @@ section{
  .marjin{
    margin-right: 30px;
  }
+
+ .leo{
+   width: 50%;
+   padding-left: 2%;
+   box-shadow: 10px 10px 30px gray;
+   border-radius: 5px;
+   margin-right: 5%;
+   margin-left: 5%;
+   
+  
+ }
+
+ h3{
+   color: tomato;
+   font-size: 25px;
+ }
+
+ .last{
+   background-image: url(Images/exp-bg.png);
+   background-repeat: no-repeat;
+   background-position: left;
+ }
+
+ #fuck{
+   border-image-slice: 1;
+   border-left: 10px solid;
+   background-image: linear-gradient(rgb(37, 141, 182), rgb(223, 124, 218));
+  
+  }
+
+#luck{
+  border-image-slice: 1;
+   border-left: 10px solid;
+   background-image: linear-gradient(rgb(79, 138, 31), rgb(197, 211, 137));
+} 
+
+footer{
+  text-align: center;
+}
