--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ section{
  }
 
  .banner{
-   background-image: url(Images/top-banner.png);
+   background-image: url(images/top-banner.png);
    background-repeat:no-repeat;
  }  
 
@@ -70,7 +70,7 @@ section{
  }
 
  .last{
-   background-image: url(Images/exp-bg.png);
+   background-image: url(images/exp-bg.png);
    background-repeat: no-repeat;
    background-position: left;
  }
